aañadi las demas paginas

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
         </nav>
     </header>
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="main">
         <h1 class="font-monospace">
             Esta pagina web tratará sobre mi artista favorito, Lit Killah
