cambio de imagen principal

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1 class="font-monospace">
             Esta pagina web tratará sobre mi artista favorito, Lit Killah
         </h1>
-        <img src="https://akamai.sscdn.co/uploadfile/letras/fotos/1/7/3/3/173371bad8c25e0a66c91cf5c53fc76d.jpg"
+            <img src="./img/lit2.jpg"
             class="rounded mx-auto d-block mt-5 mb-4 animate__animated animate__zoomIn tamaño_foto" alt="lit Killah" />
         <h2>
             Vamos a repasar su carrera, como inició en la musica, sus canciones y
