resolvi problema con scss

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="#">Home</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="#">Biografia</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="#">Discografia</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="#">Galeria</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="#">Contacto</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./index.html">Home</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./pages/biografia.html">Biografia</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./pages/discografia.html">Discografia</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./pages/galeria.html">Galeria</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./pages/contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
