--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="body">
+<body class="bc">
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-color">
             <div class="container-fluid">
