--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- CONTENIDO PRINCIPAL -->
     <main class="main">
         <h1 class="font-monospace">
-            Esta pagina web tratará sobre mi artista favorito, Lit Killah
+            Esta página web tratará sobre mi artista favorito, Lit Killah
         </h1>
             <img src="./img/lit2.jpg"
             class="rounded mx-auto d-block mt-5 mb-4 animate__animated animate__zoomIn tamaño_foto" alt="lit Killah" />
