--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -40,7 +40,8 @@
 
     <main class="main">
         <section class="mt-4">
-            <p>Lit Killah, nacido en Salta como Mauro Monzón, es un artista argentino.</p>
+            <h1>BIOGRAFIA</h1>
+            <p><span>Lit Killah</span>, nacido en Salta como Mauro Monzón, es un artista argentino.</p>
             <p>Desde chico se nutrió del rap y hip hop, escuchando Eminem, 50Cent y otros. En 2013 empezó a ver videos
                 de Freestyle y naturalmente empezaron a brotarle sus propias rimas.</p>
             <p>Rápidamente tomó notoriedad por la rapidez de su doble tempo y su ingenio, aptitudes que le valieron los
