--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -39,7 +39,7 @@
     </header>
     <main class="main">
         <section>
-            <h1>Canciones y colaboraciones</h1>
+            <h1>CANCIONES Y COLABORACIONES</h1>
             <br><br>
         </section>
         <section>
