--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -42,6 +42,7 @@
         </nav>
     </header>
     <main class="main">
+        <h1>GALERIA</h1>
         <div id="carouselExampleCaptions" class="carousel slide carousel-padre" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
