--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="../index.html">Home</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./Biografia.html">Biografia</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./biografia.html">Biografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./discografia.html">Discografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./galeria.html">Galeria</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./contacto.html">Contacto</a>
