--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -27,14 +27,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="../index.html">Home</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight"
-                            href="./Biografia.html">Biografia</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight"
-                            href="./discografia.html">Discografia</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight"
-                            href="./galeria.html">Galeria</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight"
-                            href="./contacto.html">Contacto</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./biografia.html">Biografia</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./discografia.html">Discografia</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./galeria.html">Galeria</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./contacto.html">Contacto</a>
 
                     </div>
                 </div>
