--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Biografia del artista Lit Killah">
+    <meta name="keywords"  content="Lit killah, urbano, musica, argentina">
     <title>Lit Killah - Inicio</title>
     <link rel="shortcut icon" href="./img/mawzLogo.jpg" />
     <!-- Bootstrap -->
