--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Inicios de Lit Killah en su carrera artistica">
+    <meta name="keywords"  content="Quinto escalon, musica, Lit killah, Duki">
     <title>Lit Killah - Biografia</title>
     <link rel="shortcut icon" href="../img/mawzLogo.jpg">
     <!-- Bootstrap -->
