--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Encuesta sobre la pagina">
+    <meta name="keywords"  content="Contacto, encuesta, opinion">
     <title>Lit Killah - Contacto</title>
     <link rel="shortcut icon" href="../img/mawzLogo.jpg">
     <!-- Bootstrap -->
