--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="galeria de fotos de lit killah">
+    <meta name="keywords"  content="Galeria, fotos, imagenes,">
     <title>Lit Killah - Galeria</title>
     <link rel="shortcut icon" href="../img/mawzLogo.jpg">
     <!-- Bootstrap -->
