--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Discografia de Lit Killah">
+    <meta name="keywords"  content="Discografia, canciones, musica,">
     <title>Lit Killah - Discografia</title>
     <link rel="shortcut icon" href="../img/mawzLogo.jpg">
     <!-- Bootstrap -->
