arreglo de alts

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -49,7 +49,7 @@
             <p>Rápidamente tomó notoriedad por la rapidez de su doble tempo y su ingenio, aptitudes que le valieron los
                 apodos de <span>“Ametralladora”</span> y <span>“Modo Tomate”</span> (porque se pone colorado al no tomar aire para terminar su
                 frase).</p>
-            <span><img class="rounded mx-auto d-block mt-5 mb-4 animate__animated animate__zoomIn tamaño_foto" src="../img/Lit rapeando.jpg" alt="Lit killah rapeando"></span>
+            <span><img class="rounded mx-auto d-block mt-5 mb-4 animate__animated animate__zoomIn tamaño_foto" src="../img/Lit rapeando.jpg" alt="Lit killah rapeando contra luchito en el quinto escalon"></span>
             <br>
             <p>En febrero de 2016 comienza a frecuentar las plazas. Se presentó por primera vez en el encuentro <span>“El
                 Quinto Escalón”</span> (en el Parque Rivadavia del barrio de Caballito, en Buenos Aires) el 9 de abril, donde
