agregué gitignore y modifique errores en los html

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -49,11 +49,8 @@
             <p>Rápidamente tomó notoriedad por la rapidez de su doble tempo y su ingenio, aptitudes que le valieron los
                 apodos de <span>“Ametralladora”</span> y <span>“Modo Tomate”</span> (porque se pone colorado al no tomar aire para terminar su
                 frase).</p>
-<<<<<<< HEAD
             <span><img class="rounded mx-auto d-block mt-5 mb-4 animate__animated animate__zoomIn tamaño_foto" src="../img/Lit rapeando.jpg" alt="Lit killah rapeando contra luchito en el quinto escalon"></span>
-=======
-            <span><img class="rounded mx-auto d-block mt-5 mb-4 animate__animated animate__zoomIn tamaño_foto" src="../img/Lit rapeando.jpg" alt="Lit killah rapeando en el quinto escalon"></span>
->>>>>>> rama2
+            <!-- <span><img class="rounded mx-auto d-block mt-5 mb-4 animate__animated animate__zoomIn tamaño_foto" src="../img/Lit rapeando.jpg" alt="Lit killah rapeando en el quinto escalon"></span> -->
             <br>
             <p>En febrero de 2016 comienza a frecuentar las plazas. Se presentó por primera vez en el encuentro <span>“El
                 Quinto Escalón”</span> (en el Parque Rivadavia del barrio de Caballito, en Buenos Aires) el 9 de abril, donde
@@ -62,7 +59,7 @@
             <p>El 14 de agosto de ese año salió campeón en <span>“El Campito Free VIII”</span>, que se realiza en el Parque Sarmiento
                 de Ramos Mejía, provincia de Buenos Aires, en una final contra Beelze. En esa competencia, sus
                 punchlines tuvieron mucha repercusión, en especial la que lanzó contra Duki, utilizando la palabra
-                <span>“brisa”</span>, usada por su rival en el acote anterior, rima que se volveria viral y haria su nombre aún más
+                <span>“Brisa”</span>, usada por su rival en el acote anterior, rima que se volveria viral y haria su nombre aún más
                 conocido.</p>
             <br>
             <p>En 2017 tuvo un muy buen desempeño, ganando dos fechas consecutivas en <span>El Quinto Escalón</span>. Y la fama ya
@@ -78,8 +75,7 @@
     </main>
 
     <!-- FOOTER -->
-    <div class="container">
-        <footer class="py-3 my-4 footer-color">
+        <footer class="py-3 my-4 footer-color container">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="https://www.tiktok.com/@litkillah?lang=es"
                         class="nav-link px-2 text-muted" target="_blank">TikTok</a></li>
@@ -91,7 +87,6 @@
             </ul>
             <p class="text-center text-muted">© 2022 Gabriel Cañete</p>
         </footer>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
