--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
             Lit es un artista con una gran carrera, por lo que tenemos mucho
             material para hablar.
         </p>
-        <a href="#"><button type="button" class="btn boton-color">¡Empecemos!</button></a>
+        <a href="./pages/biografia.html"><button type="button" class="btn boton-color">¡Empecemos!</button></a>
     </main>
 
     <!-- FOOTER -->
-    <div class="container">
-        <footer class="py-3 my-4 mt-5 footer-color">
+        <footer class="py-3 my-4 mt-5 footer-color container">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item">
                     <a href="https://www.tiktok.com/@litkillah?lang=es" class="nav-link px-2 text-muted"
@@ -76,7 +75,6 @@
             </ul>
             <p class="text-center text-muted">© 2022 Gabriel Cañete</p>
         </footer>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
