--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -113,8 +113,7 @@
     </main>
 
     <!-- FOOTER -->
-    <div class="container">
-        <footer class="py-3 my-4 footer-color">
+        <footer class="py-3 my-4 footer-color container">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="https://www.tiktok.com/@litkillah?lang=es"
                         class="nav-link px-2 text-muted" target="_blank">TikTok</a></li>
@@ -126,7 +125,6 @@
             </ul>
             <p class="text-center text-muted">© 2022 Gabriel Cañete</p>
         </footer>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
