--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -50,7 +50,7 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner mt-4">
+            <div class="carousel-inner carousel-padre mt-4">
                 <div class="carousel-item active">
                     <img src="https://www.infobae.com/new-resizer/CodakPH8f7CPP8bLxfa5AutbRL0=/1200x628/filters:format(webp):quality(85)//cloudfront-us-east-1.images.arcpublishing.com/infobae/AAQGBWQVEFDHRMHDQLFROOELRU.jpg"
                         class="d-b" alt="Lit en uno de sus shows en vivo">
@@ -87,8 +87,7 @@
     </main>
 
     <!-- FOOTER -->
-    <div class="container">
-        <footer class="py-3 my-4 footer-color">
+        <footer class="py-3 my-4 footer-color container">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="https://www.tiktok.com/@litkillah?lang=es"
                         class="nav-link px-2 text-muted" target="_blank">TikTok</a></li>
@@ -100,7 +99,6 @@
             </ul>
             <p class="text-center text-muted">© 2022 Gabriel Cañete</p>
         </footer>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
