--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./index.html">Home</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight negrita" href="./index.html">Home</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./pages/biografia.html">Biografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./pages/discografia.html">Discografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./pages/galeria.html">Galeria</a>
