--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,7 +32,7 @@
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./biografia.html">Biografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./discografia.html">Discografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./galeria.html">Galeria</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./contacto.html">Contacto</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight negrita" href="./contacto.html">Contacto</a>
 
                     </div>
                 </div>
