--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -30,7 +30,7 @@
                     <div class="navbar-nav">
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="../index.html">Home</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./biografia.html">Biografia</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight" href="./discografia.html">Discografia</a>
+                        <a class="nav-link animate__animated animate__lightSpeedInRight negrita" href="./discografia.html">Discografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./galeria.html">Galeria</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight" href="./contacto.html">Contacto</a>
 
