--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -33,7 +33,7 @@
                             href="./biografia.html">Biografia</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight"
                             href="./discografia.html">Discografia</a>
-                        <a class="nav-link animate__animated animate__lightSpeedInRight"
+                        <a class="nav-link animate__animated animate__lightSpeedInRight negrita"
                             href="./galeria.html">Galeria</a>
                         <a class="nav-link animate__animated animate__lightSpeedInRight"
                             href="./contacto.html">Contacto</a>
@@ -81,6 +81,12 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <br>
+          <section class="fotos12">
+            <img class="foto1" src="https://viapais.com.ar/resizer/BVbZhoZSyynXxVieHrvENkwOIiY=/1023x767/smart/cloudfront-us-east-1.images.arcpublishing.com/grupoclarin/KV5VBESMW5BDHMTYRKCFDRWQLE.jpg" alt="Lit killah en su adolescencia">
+            <p class="textodeimg"><span>2017</span> vs <span>2022</span></p>
+            <img class="foto2" src="https://kihi.news/__export/1629492055756/sites/kihi/img/2021/08/20/lit_killah_01.jpg_1152304179.jpg" alt="Lit Killah posando para su album mawz">
+        </section>
         <section class="mt-4">
             <p>
                 Por ultimo, un pequeño formulario que nos gustaria que completes (^-^)
